--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,12 +51,13 @@
 
     /for report
 
-<string name="chart_type">Chart Type:</string>
+    <string name="chart_type">Chart Type:</string>
+    <string name="start_date">Start Date:</string>
+    <string name="end_date">End Date:</string>
 
-<string-array name="chart_options">
-<item>Bar Chart</item>
-<item>Pie Chart</item>
-</string-array>
-
+    <string-array name="chart_options">
+    <item>Bar Chart</item>
+    <item>Pie Chart</item>
+    </string-array>
 
 </resources>
